--- a/4.html
+++ b/4.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Register Form</title>
+        <title>Register Form</title>
 </head>
 <body>
-	<form action="/action_page.php" method="get" target="_blank">
-		<label for="name">Name:</label>
+        <form action="/action_page.php" method="get" >
+                <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br>
         <label for="number"> Phone Number:</label>
         <input type="number" id="number" name="number"><br><br>
@@ -24,7 +23,7 @@
                <label for="subject2">maths</label><br>
                <input type="checkbox" id="subject3" name="subject3" value="chemistry">
                <label for="subject3"> chemistry</label><br><br>
-               <input type="submit" value="Submit">
+               <button type="submit" formtarget="_blank">Submit to a new window</button>
     </form>
 </body>
 </html>
